@@ -1,3 +1,8 @@
+2014-08-06  Anton Kolesov  <Anton.Kolesov@synopsys.com>
+
+	* tag-release.sh: Use stable branches for tags, instead of detached
+	tags.
+
 2014-08-01  Anton Kolesov  <Anton.Kolesov@synopsys.com>
 
 	* site.exp: Ensure that HOSTCC and HOSTCFLAGS are set.
